--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
     --black: #000000;
     --very-light-pink: #c7c7c7;
     --text-input-field: #f7f7f7;
-    --hospital-green: #acd982;
+    --hospital-green: #00AEEA;
+    --dark-blue: #1351A4;
     --sm: 14px;
     --md: 16px;
     --lg: 18px;
@@ -31,14 +32,16 @@ nav {
     display: flex;
     justify-content: space-between;
     padding: 0 24px;
-    border-bottom: 1px solid var(--very-light-pink);
+    border-bottom: 1px solid var(--hospital-green);
 }
 .menu {
     display: none;
     cursor: pointer;
 }
 .logo {
-    width: 100px;
+    margin-top: 4px;
+    width: 150px;
+    height: 50px;
 }
 .navbar-left ul,
 .navbar-right ul {
@@ -148,11 +151,12 @@ nav {
     width: 100%;
     position: absolute;
     top: 61px;
+    right: 0;
     /* box-sizing: border-box lo que hace es que incluye el tamaño del padding al tamaño del contenido para que no la caja no se agrande y tengamos problemas con el responsive, porque cuando le agregamos padding al contenedor externo y le ponemos un heigth del 100% realmente queda el 100% mas los px que se le pongan al padding y por lo tanto va a quedar con un scroll no tan chevere :S */
     height: 90vh;
     background-color: var(--white);
     /* display: flex;
-     flex por defecto viene para ubicar llos contenedores uno al lado del otro con flex-direction le cambiamos la direccion para que se puedan ubicar uno abajo de otro con column 
+    flex por defecto viene para ubicar llos contenedores uno al lado del otro con flex-direction le cambiamos la direccion para que se puedan ubicar uno abajo de otro con column 
     flex-direction: column;
     justify-content: space-between; */
 
@@ -182,7 +186,7 @@ nav {
     font-size: var(--sm);
     color: var(--hospital-green);
 }
- 
+
 /* produc detail y carrito */
 
 .product-detail {
@@ -406,7 +410,7 @@ nav {
     justify-content: center;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 770px) {
     .menu {
         display: block;
     }
@@ -434,7 +438,7 @@ nav {
         height: 140px;
     }
 }
-@media (min-width: 641px) {
+@media (min-width: 771px) {
     .mobile-menu {
         display: none;
     }
