se agregan parte de los productos que se van a vender, pero ahora tenemos una dificultad porque la seccion de productDetail se queda arriba y no va a ser tan comodo para el usuario, buscar solución

--- a/styles.css
+++ b/styles.css
@@ -339,6 +339,9 @@ nav {
     margin-bottom: 0px;
     color: var(--very-light-pink);
 }
+.Product-Info-Price li {
+    list-style: none;
+}
 .product-info figure img {
     /* solamente las imagenes que esten en el contenedor figure dentro de la clase product-info van a resivir las siguientes modificaciones */
     width: 35px;
