--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     --white: #ffffff;
     --black: #000000;
     --very-light-pink: #c7c7c7;
+    --strong-gray: #3e3e3e;
     --text-input-field: #f7f7f7;
     --hospital-green: #00AEEA;
     --dark-blue: #1351A4;
@@ -255,7 +256,7 @@ nav {
 }
 .x {
     margin-right: 6px;
-    width: 24px;
+    width: 20px;
 }
 .x:hover{
     cursor: pointer;
@@ -386,13 +387,13 @@ nav {
 }
 .product-detail-close:hover {
     cursor: pointer;
-    background: var(--dark-blue);
+    background: var(--hospital-green);
 }
 .product-detail-close img {
     position: absolute;
-    right: -2px;
-    bottom: -2px;
-    width: 28px;
+    right: 2px;
+    bottom: 2px;
+    width: 20px;
 }
 .extended-product-detail > img:nth-child(2) {
     width: 100%;
@@ -416,8 +417,8 @@ nav {
     margin-bottom: 36px;
 }
 .extended-product-info p:nth-child(3) {
-    color: var(--very-light-pink);
-    font-size: var(--sm);
+    color: var(--strong-gray);
+    font-size: var(--md);
     margin-top: 0;
     margin-bottom: 36px;
 }
